fix: dark mode styles

--- a/src/ui/component/Popup/index.less
+++ b/src/ui/component/Popup/index.less
@@ -19,8 +19,8 @@
   }
   .ant-drawer-content {
     flex: 1;
-    background-color: #fff;
-    background: #ffffff;
+    background-color: var(--r-neutral-bg-1,#fff);
+    background: var(--r-neutral-bg-1,#fff);
     border-radius: 16px 16px 0px 0px;
     overflow: visible;
   }
